step 2 scraping: all listings URLs complete

--- a/Notebooks/scrape round 2 car url.ipynb
+++ b/Notebooks/scrape round 2 car url.ipynb
@@ -11,7 +11,8 @@
     "from splinter import Browser\n",
     "from bs4 import BeautifulSoup as bs\n",
     "from webdriver_manager.chrome import ChromeDriverManager\n",
-    "import time "
+    "import time \n",
+    "import random"
    ]
   },
   {
@@ -99,17 +100,50 @@
        "      <th>4</th>\n",
        "      <td>https://www.cargurus.com/Cars/new/searchresult...</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>154</th>\n",
+       "      <td>https://www.cargurus.com/Cars/new/searchresult...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>155</th>\n",
+       "      <td>https://www.cargurus.com/Cars/new/searchresult...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>156</th>\n",
+       "      <td>https://www.cargurus.com/Cars/new/searchresult...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>157</th>\n",
+       "      <td>https://www.cargurus.com/Cars/new/searchresult...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>158</th>\n",
+       "      <td>https://www.cargurus.com/Cars/new/searchresult...</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>159 rows × 1 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                                urls\n",
-       "0  https://www.cargurus.com/Cars/new/searchresult...\n",
-       "1  https://www.cargurus.com/Cars/new/searchresult...\n",
-       "2  https://www.cargurus.com/Cars/new/searchresult...\n",
-       "3  https://www.cargurus.com/Cars/new/searchresult...\n",
-       "4  https://www.cargurus.com/Cars/new/searchresult..."
+       "                                                  urls\n",
+       "0    https://www.cargurus.com/Cars/new/searchresult...\n",
+       "1    https://www.cargurus.com/Cars/new/searchresult...\n",
+       "2    https://www.cargurus.com/Cars/new/searchresult...\n",
+       "3    https://www.cargurus.com/Cars/new/searchresult...\n",
+       "4    https://www.cargurus.com/Cars/new/searchresult...\n",
+       "..                                                 ...\n",
+       "154  https://www.cargurus.com/Cars/new/searchresult...\n",
+       "155  https://www.cargurus.com/Cars/new/searchresult...\n",
+       "156  https://www.cargurus.com/Cars/new/searchresult...\n",
+       "157  https://www.cargurus.com/Cars/new/searchresult...\n",
+       "158  https://www.cargurus.com/Cars/new/searchresult...\n",
+       "\n",
+       "[159 rows x 1 columns]"
       ]
      },
      "execution_count": 3,
@@ -154,7 +188,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "05c0d991",
+   "id": "2e05dcda",
    "metadata": {},
    "source": [
     "## Takes URLs generated in step 1 and creates new list of individual car listing URLs"
@@ -162,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "1028c502",
    "metadata": {
     "scrolled": true
@@ -174,7 +208,7 @@
     "for url in url_list:\n",
     "\n",
     "    browser.visit(url)\n",
-    "    time.sleep(3)\n",
+    "    time.sleep(random.randint(3, 6))\n",
     "    elems = browser.find_by_tag('a')\n",
     "\n",
     "    links_list =[]\n",
@@ -190,7 +224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "21b09621",
+   "id": "515cd394",
    "metadata": {},
    "source": [
     "#### how many listings total"
@@ -198,17 +232,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "4bfa031a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "78"
+       "2221"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "56e251b2",
    "metadata": {},
    "outputs": [],
@@ -233,7 +267,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "346b4d8c",
+   "id": "876a2553",
    "metadata": {},
    "outputs": [],
    "source": []
