--- a/Notebooks/URL_List_Generator.ipynb
+++ b/Notebooks/URL_List_Generator.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "9f8b85d8",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "2ba08f40",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "d208cadb",
    "metadata": {},
    "outputs": [],
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "3c29c191",
    "metadata": {
     "scrolled": true
@@ -159,6 +159,8 @@
    ],
    "source": [
     "scrapeURLs = []\n",
+    "makekeys = []\n",
+    "modelkeys = []\n",
     "\n",
     "for zipcode in zipcodes:\n",
     "    for key in cargurus:\n",
@@ -174,16 +176,18 @@
     "#                 fakeurl = f'make: {makekey}   model: {modelkey}   modelcode: {modelcode}'\n",
     "#                 print(fakeurl)\n",
     "\n",
-    "                url = f'https://www.cargurus.com/Cars/new/searchresults.action?zip={zipcode}&showNegotiable=true&sortDir=ASC&sourceContext=homePageNewCarTab_false_0&distance=50&sortType=PRICE&entitySelectingHelper.selectedEntity={modelcode}'\n",
+    "                url = f'https://www.cargurus.com/Cars/new/searchresults.action?zip={zipcode}&showNegotiable=true&sortDir=ASC&sourceContext=homePageNewCarTab_false_0&distance={radius}&sortType=PRICE&entitySelectingHelper.selectedEntity={modelcode}'\n",
     "                \n",
     "                scrapeURLs.append(url)\n",
+    "                makekeys.append(makekey)\n",
+    "                modelkeys.append(modelkey)\n",
     "for url in scrapeURLs:\n",
     "    print(url + '\\n')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "a117f8fa",
    "metadata": {
     "scrolled": true
@@ -211,192 +215,260 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>urls</th>\n",
+       "      <th>make</th>\n",
+       "      <th>model</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>https://www.cargurus.com/Cars/new/searchresult...</td>\n",
+       "      <td>ford</td>\n",
+       "      <td>bronco</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>https://www.cargurus.com/Cars/new/searchresult...</td>\n",
+       "      <td>ford</td>\n",
+       "      <td>maverick</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>https://www.cargurus.com/Cars/new/searchresult...</td>\n",
+       "      <td>gmc</td>\n",
+       "      <td>hummer ev</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>https://www.cargurus.com/Cars/new/searchresult...</td>\n",
+       "      <td>chevrolet</td>\n",
+       "      <td>blazer</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>https://www.cargurus.com/Cars/new/searchresult...</td>\n",
+       "      <td>jeep</td>\n",
+       "      <td>wrangler</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>https://www.cargurus.com/Cars/new/searchresult...</td>\n",
+       "      <td>jeep</td>\n",
+       "      <td>wrangler</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>https://www.cargurus.com/Cars/new/searchresult...</td>\n",
+       "      <td>jeep</td>\n",
+       "      <td>wrangler</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
        "      <td>https://www.cargurus.com/Cars/new/searchresult...</td>\n",
+       "      <td>toyota</td>\n",
+       "      <td>tundra</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
        "      <td>https://www.cargurus.com/Cars/new/searchresult...</td>\n",
+       "      <td>ford</td>\n",
+       "      <td>bronco</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
        "      <td>https://www.cargurus.com/Cars/new/searchresult...</td>\n",
+       "      <td>ford</td>\n",
+       "      <td>maverick</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
        "      <td>https://www.cargurus.com/Cars/new/searchresult...</td>\n",
+       "      <td>gmc</td>\n",
+       "      <td>hummer ev</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
        "      <td>https://www.cargurus.com/Cars/new/searchresult...</td>\n",
+       "      <td>chevrolet</td>\n",
+       "      <td>blazer</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
        "      <td>https://www.cargurus.com/Cars/new/searchresult...</td>\n",
+       "      <td>jeep</td>\n",
+       "      <td>wrangler</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
        "      <td>https://www.cargurus.com/Cars/new/searchresult...</td>\n",
+       "      <td>jeep</td>\n",
+       "      <td>wrangler</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
        "      <td>https://www.cargurus.com/Cars/new/searchresult...</td>\n",
+       "      <td>jeep</td>\n",
+       "      <td>wrangler</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15</th>\n",
        "      <td>https://www.cargurus.com/Cars/new/searchresult...</td>\n",
+       "      <td>toyota</td>\n",
+       "      <td>tundra</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>16</th>\n",
        "      <td>https://www.cargurus.com/Cars/new/searchresult...</td>\n",
+       "      <td>ford</td>\n",
+       "      <td>bronco</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>17</th>\n",
        "      <td>https://www.cargurus.com/Cars/new/searchresult...</td>\n",
+       "      <td>ford</td>\n",
+       "      <td>maverick</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>18</th>\n",
        "      <td>https://www.cargurus.com/Cars/new/searchresult...</td>\n",
+       "      <td>gmc</td>\n",
+       "      <td>hummer ev</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>19</th>\n",
        "      <td>https://www.cargurus.com/Cars/new/searchresult...</td>\n",
+       "      <td>chevrolet</td>\n",
+       "      <td>blazer</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>20</th>\n",
        "      <td>https://www.cargurus.com/Cars/new/searchresult...</td>\n",
+       "      <td>jeep</td>\n",
+       "      <td>wrangler</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>21</th>\n",
        "      <td>https://www.cargurus.com/Cars/new/searchresult...</td>\n",
+       "      <td>jeep</td>\n",
+       "      <td>wrangler</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>22</th>\n",
        "      <td>https://www.cargurus.com/Cars/new/searchresult...</td>\n",
+       "      <td>jeep</td>\n",
+       "      <td>wrangler</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>23</th>\n",
        "      <td>https://www.cargurus.com/Cars/new/searchresult...</td>\n",
+       "      <td>toyota</td>\n",
+       "      <td>tundra</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>24</th>\n",
        "      <td>https://www.cargurus.com/Cars/new/searchresult...</td>\n",
+       "      <td>ford</td>\n",
+       "      <td>bronco</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25</th>\n",
        "      <td>https://www.cargurus.com/Cars/new/searchresult...</td>\n",
+       "      <td>ford</td>\n",
+       "      <td>maverick</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>26</th>\n",
        "      <td>https://www.cargurus.com/Cars/new/searchresult...</td>\n",
+       "      <td>gmc</td>\n",
+       "      <td>hummer ev</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>27</th>\n",
        "      <td>https://www.cargurus.com/Cars/new/searchresult...</td>\n",
+       "      <td>chevrolet</td>\n",
+       "      <td>blazer</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>28</th>\n",
        "      <td>https://www.cargurus.com/Cars/new/searchresult...</td>\n",
+       "      <td>jeep</td>\n",
+       "      <td>wrangler</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>29</th>\n",
        "      <td>https://www.cargurus.com/Cars/new/searchresult...</td>\n",
+       "      <td>jeep</td>\n",
+       "      <td>wrangler</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>30</th>\n",
        "      <td>https://www.cargurus.com/Cars/new/searchresult...</td>\n",
+       "      <td>jeep</td>\n",
+       "      <td>wrangler</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>31</th>\n",
        "      <td>https://www.cargurus.com/Cars/new/searchresult...</td>\n",
+       "      <td>toyota</td>\n",
+       "      <td>tundra</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                                 urls\n",
-       "0   https://www.cargurus.com/Cars/new/searchresult...\n",
-       "1   https://www.cargurus.com/Cars/new/searchresult...\n",
-       "2   https://www.cargurus.com/Cars/new/searchresult...\n",
-       "3   https://www.cargurus.com/Cars/new/searchresult...\n",
-       "4   https://www.cargurus.com/Cars/new/searchresult...\n",
-       "5   https://www.cargurus.com/Cars/new/searchresult...\n",
-       "6   https://www.cargurus.com/Cars/new/searchresult...\n",
-       "7   https://www.cargurus.com/Cars/new/searchresult...\n",
-       "8   https://www.cargurus.com/Cars/new/searchresult...\n",
-       "9   https://www.cargurus.com/Cars/new/searchresult...\n",
-       "10  https://www.cargurus.com/Cars/new/searchresult...\n",
-       "11  https://www.cargurus.com/Cars/new/searchresult...\n",
-       "12  https://www.cargurus.com/Cars/new/searchresult...\n",
-       "13  https://www.cargurus.com/Cars/new/searchresult...\n",
-       "14  https://www.cargurus.com/Cars/new/searchresult...\n",
-       "15  https://www.cargurus.com/Cars/new/searchresult...\n",
-       "16  https://www.cargurus.com/Cars/new/searchresult...\n",
-       "17  https://www.cargurus.com/Cars/new/searchresult...\n",
-       "18  https://www.cargurus.com/Cars/new/searchresult...\n",
-       "19  https://www.cargurus.com/Cars/new/searchresult...\n",
-       "20  https://www.cargurus.com/Cars/new/searchresult...\n",
-       "21  https://www.cargurus.com/Cars/new/searchresult...\n",
-       "22  https://www.cargurus.com/Cars/new/searchresult...\n",
-       "23  https://www.cargurus.com/Cars/new/searchresult...\n",
-       "24  https://www.cargurus.com/Cars/new/searchresult...\n",
-       "25  https://www.cargurus.com/Cars/new/searchresult...\n",
-       "26  https://www.cargurus.com/Cars/new/searchresult...\n",
-       "27  https://www.cargurus.com/Cars/new/searchresult...\n",
-       "28  https://www.cargurus.com/Cars/new/searchresult...\n",
-       "29  https://www.cargurus.com/Cars/new/searchresult...\n",
-       "30  https://www.cargurus.com/Cars/new/searchresult...\n",
-       "31  https://www.cargurus.com/Cars/new/searchresult..."
+       "                                                 urls       make      model\n",
+       "0   https://www.cargurus.com/Cars/new/searchresult...       ford     bronco\n",
+       "1   https://www.cargurus.com/Cars/new/searchresult...       ford   maverick\n",
+       "2   https://www.cargurus.com/Cars/new/searchresult...        gmc  hummer ev\n",
+       "3   https://www.cargurus.com/Cars/new/searchresult...  chevrolet     blazer\n",
+       "4   https://www.cargurus.com/Cars/new/searchresult...       jeep   wrangler\n",
+       "5   https://www.cargurus.com/Cars/new/searchresult...       jeep   wrangler\n",
+       "6   https://www.cargurus.com/Cars/new/searchresult...       jeep   wrangler\n",
+       "7   https://www.cargurus.com/Cars/new/searchresult...     toyota     tundra\n",
+       "8   https://www.cargurus.com/Cars/new/searchresult...       ford     bronco\n",
+       "9   https://www.cargurus.com/Cars/new/searchresult...       ford   maverick\n",
+       "10  https://www.cargurus.com/Cars/new/searchresult...        gmc  hummer ev\n",
+       "11  https://www.cargurus.com/Cars/new/searchresult...  chevrolet     blazer\n",
+       "12  https://www.cargurus.com/Cars/new/searchresult...       jeep   wrangler\n",
+       "13  https://www.cargurus.com/Cars/new/searchresult...       jeep   wrangler\n",
+       "14  https://www.cargurus.com/Cars/new/searchresult...       jeep   wrangler\n",
+       "15  https://www.cargurus.com/Cars/new/searchresult...     toyota     tundra\n",
+       "16  https://www.cargurus.com/Cars/new/searchresult...       ford     bronco\n",
+       "17  https://www.cargurus.com/Cars/new/searchresult...       ford   maverick\n",
+       "18  https://www.cargurus.com/Cars/new/searchresult...        gmc  hummer ev\n",
+       "19  https://www.cargurus.com/Cars/new/searchresult...  chevrolet     blazer\n",
+       "20  https://www.cargurus.com/Cars/new/searchresult...       jeep   wrangler\n",
+       "21  https://www.cargurus.com/Cars/new/searchresult...       jeep   wrangler\n",
+       "22  https://www.cargurus.com/Cars/new/searchresult...       jeep   wrangler\n",
+       "23  https://www.cargurus.com/Cars/new/searchresult...     toyota     tundra\n",
+       "24  https://www.cargurus.com/Cars/new/searchresult...       ford     bronco\n",
+       "25  https://www.cargurus.com/Cars/new/searchresult...       ford   maverick\n",
+       "26  https://www.cargurus.com/Cars/new/searchresult...        gmc  hummer ev\n",
+       "27  https://www.cargurus.com/Cars/new/searchresult...  chevrolet     blazer\n",
+       "28  https://www.cargurus.com/Cars/new/searchresult...       jeep   wrangler\n",
+       "29  https://www.cargurus.com/Cars/new/searchresult...       jeep   wrangler\n",
+       "30  https://www.cargurus.com/Cars/new/searchresult...       jeep   wrangler\n",
+       "31  https://www.cargurus.com/Cars/new/searchresult...     toyota     tundra"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "url_df = pd.DataFrame({\n",
-    "    \"urls\": scrapeURLs\n",
+    "    \"urls\": scrapeURLs,\n",
+    "    \"make\": makekeys,\n",
+    "    \"model\": modelkeys\n",
     "})\n",
     "url_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "beed7c7e",
    "metadata": {},
    "outputs": [],
