1st step: setting up csv for data types

--- a/Notebooks/scrape step 1.ipynb
+++ b/Notebooks/scrape step 1.ipynb
@@ -412,7 +412,7 @@
     "    total_results = int(page_counter_html.split(\"of <strong>\")[1].split(\"</strong>\")[0])\n",
     "\n",
     "    results_mod = total_results % page_results\n",
-    "    numpages = int(total_results / page_results)\n",
+    "    numpages = total_results // page_results\n",
     "    if results_mod != 0:\n",
     "        numpages += 1\n",
     "\n",
