sqlite working but not optimized. have postgres backup

--- a/Notebooks/convert CIS to sqlite.ipynb
+++ b/Notebooks/convert CIS to sqlite.ipynb
@@ -2,13 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 26,
    "id": "59c67c0e",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "from sqlalchemy import create_engine"
+    "from sqlalchemy import create_engine\n",
+    "import sys\n",
+    "import psycopg2\n",
+    "import sqlite3\n",
+    "from config import pg_key\n"
    ]
   },
   {
@@ -618,7 +622,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "322ee5bc",
+   "id": "0a3c1d37",
    "metadata": {},
    "source": [
     "### Adjust Data Types"
@@ -627,7 +631,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "cc21d5d5",
+   "id": "dd619df0",
    "metadata": {},
    "outputs": [
     {
@@ -681,24 +685,13 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "6f70a2f0",
+   "id": "abaa22e2",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Save back to CSV to continue processing in Postgres.\n",
     "\n",
     "cis_df.to_csv(\"../Resources/Data Sources/cis_step_2.csv\", index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "id": "805817b2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "engine = create_engine('sqlite:///../Resources/CIS_2018_new_cars.sqlite', echo=True)\n",
-    "sqlite_connection = engine.connect()"
    ]
   },
   {
@@ -777,9 +770,337 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "fdd43d54",
+   "metadata": {},
+   "source": [
+    "# Convert PostgreSQL to sqlite\n",
+    "#### source: https://www.prudentdevs.club/pg-to-sqlite"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "461d2a47",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "engine = create_engine(f'postgresql://postgres:{pg_key}@localhost:5432/cis2018')\n",
+    "connection = engine.connect()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "763d550e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>model_year</th>\n",
+       "      <th>make</th>\n",
+       "      <th>model</th>\n",
+       "      <th>msrp</th>\n",
+       "      <th>vehicle_type</th>\n",
+       "      <th>milage</th>\n",
+       "      <th>axles</th>\n",
+       "      <th>base_price</th>\n",
+       "      <th>bed_length_inches</th>\n",
+       "      <th>...</th>\n",
+       "      <th>top_speed_mph</th>\n",
+       "      <th>transmission_speeds</th>\n",
+       "      <th>transmission_style</th>\n",
+       "      <th>cruise_control</th>\n",
+       "      <th>auto_reverse_system</th>\n",
+       "      <th>pedestrian_alerting_sound</th>\n",
+       "      <th>blind_spot_monitor</th>\n",
+       "      <th>forward_collision_warning</th>\n",
+       "      <th>keyless_ignition</th>\n",
+       "      <th>pedestrian_auto_emergency_brake</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>82744</td>\n",
+       "      <td>2019.0</td>\n",
+       "      <td>HONDA</td>\n",
+       "      <td>Fit</td>\n",
+       "      <td>17885</td>\n",
+       "      <td>PASSENGER CAR</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Continuously Variable Transmission (CVT)</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>26575</td>\n",
+       "      <td>2019.0</td>\n",
+       "      <td>NISSAN</td>\n",
+       "      <td>Sentra</td>\n",
+       "      <td>20190</td>\n",
+       "      <td>PASSENGER CAR</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>47333</td>\n",
+       "      <td>2019.0</td>\n",
+       "      <td>NISSAN</td>\n",
+       "      <td>Titan</td>\n",
+       "      <td>51425</td>\n",
+       "      <td>TRUCK</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>55794</td>\n",
+       "      <td>2019.0</td>\n",
+       "      <td>GMC</td>\n",
+       "      <td>Sierra</td>\n",
+       "      <td>59810</td>\n",
+       "      <td>TRUCK</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>110166</td>\n",
+       "      <td>2019.0</td>\n",
+       "      <td>NISSAN</td>\n",
+       "      <td>Frontier</td>\n",
+       "      <td>33135</td>\n",
+       "      <td>TRUCK</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 26 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       id  model_year    make     model   msrp   vehicle_type  milage  axles  \\\n",
+       "0   82744      2019.0   HONDA       Fit  17885  PASSENGER CAR       0    NaN   \n",
+       "1   26575      2019.0  NISSAN    Sentra  20190  PASSENGER CAR       0    NaN   \n",
+       "2   47333      2019.0  NISSAN     Titan  51425          TRUCK       0    NaN   \n",
+       "3   55794      2019.0     GMC    Sierra  59810          TRUCK       0    NaN   \n",
+       "4  110166      2019.0  NISSAN  Frontier  33135          TRUCK       0    NaN   \n",
+       "\n",
+       "   base_price  bed_length_inches  ... top_speed_mph transmission_speeds  \\\n",
+       "0         NaN                NaN  ...           NaN                 NaN   \n",
+       "1         NaN                NaN  ...           NaN                 NaN   \n",
+       "2         NaN                NaN  ...           NaN                 NaN   \n",
+       "3         NaN                NaN  ...           NaN                 NaN   \n",
+       "4         NaN                NaN  ...           NaN                 NaN   \n",
+       "\n",
+       "                         transmission_style  cruise_control  \\\n",
+       "0  Continuously Variable Transmission (CVT)                   \n",
+       "1                                         0                   \n",
+       "2                                         0                   \n",
+       "3                                         0                   \n",
+       "4                                         0                   \n",
+       "\n",
+       "  auto_reverse_system  pedestrian_alerting_sound  blind_spot_monitor  \\\n",
+       "0                                                                      \n",
+       "1                                                                      \n",
+       "2                                                                      \n",
+       "3                                                                      \n",
+       "4                                                                      \n",
+       "\n",
+       "   forward_collision_warning keyless_ignition pedestrian_auto_emergency_brake  \n",
+       "0                                                                              \n",
+       "1                                                                              \n",
+       "2                                                                              \n",
+       "3                                                                              \n",
+       "4                                                                              \n",
+       "\n",
+       "[5 rows x 26 columns]"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sales_df = pd.read_sql(\"SELECT * FROM all_sales_view\", connection)\n",
+    "sales_df.head()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6ed533c1",
+   "id": "a890020a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "805817b2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "enginesql = create_engine('sqlite:///../Resources/CIS_2018_lite.sqlite', echo=True)\n",
+    "sqlite_connection = enginesql.connect()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "740de639",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2022-07-05 04:51:17,029 INFO sqlalchemy.engine.Engine PRAGMA main.table_info(\"sqlite:///../Resources/CIS_2018_lite.sqlite\")\n",
+      "2022-07-05 04:51:17,032 INFO sqlalchemy.engine.Engine [raw sql] ()\n",
+      "2022-07-05 04:51:17,033 INFO sqlalchemy.engine.Engine PRAGMA temp.table_info(\"sqlite:///../Resources/CIS_2018_lite.sqlite\")\n",
+      "2022-07-05 04:51:17,034 INFO sqlalchemy.engine.Engine [raw sql] ()\n",
+      "2022-07-05 04:51:17,037 INFO sqlalchemy.engine.Engine \n",
+      "CREATE TABLE \"sqlite:///../Resources/CIS_2018_lite.sqlite\" (\n",
+      "\t\"index\" BIGINT, \n",
+      "\tid BIGINT, \n",
+      "\tmodel_year FLOAT, \n",
+      "\tmake TEXT, \n",
+      "\tmodel TEXT, \n",
+      "\tmsrp BIGINT, \n",
+      "\tvehicle_type TEXT, \n",
+      "\tmilage BIGINT, \n",
+      "\taxles FLOAT, \n",
+      "\tbase_price FLOAT, \n",
+      "\tbed_length_inches FLOAT, \n",
+      "\tbed_type TEXT, \n",
+      "\tbody_cab_type TEXT, \n",
+      "\tbody_class TEXT, \n",
+      "\tdoors FLOAT, \n",
+      "\tdrive_type TEXT, \n",
+      "\tengine_hp FLOAT, \n",
+      "\ttop_speed_mph FLOAT, \n",
+      "\ttransmission_speeds FLOAT, \n",
+      "\ttransmission_style TEXT, \n",
+      "\tcruise_control TEXT, \n",
+      "\tauto_reverse_system TEXT, \n",
+      "\tpedestrian_alerting_sound TEXT, \n",
+      "\tblind_spot_monitor TEXT, \n",
+      "\tforward_collision_warning TEXT, \n",
+      "\tkeyless_ignition TEXT, \n",
+      "\tpedestrian_auto_emergency_brake TEXT\n",
+      ")\n",
+      "\n",
+      "\n",
+      "2022-07-05 04:51:17,038 INFO sqlalchemy.engine.Engine [no key 0.00060s] ()\n",
+      "2022-07-05 04:51:17,052 INFO sqlalchemy.engine.Engine COMMIT\n",
+      "2022-07-05 04:51:17,053 INFO sqlalchemy.engine.Engine CREATE INDEX \"ix_sqlite:///../Resources/CIS_2018_lite.sqlite_index\" ON \"sqlite:///../Resources/CIS_2018_lite.sqlite\" (\"index\")\n",
+      "2022-07-05 04:51:17,054 INFO sqlalchemy.engine.Engine [no key 0.00082s] ()\n",
+      "2022-07-05 04:51:17,063 INFO sqlalchemy.engine.Engine COMMIT\n",
+      "2022-07-05 04:51:17,367 INFO sqlalchemy.engine.Engine BEGIN (implicit)\n",
+      "2022-07-05 04:51:21,061 INFO sqlalchemy.engine.Engine INSERT INTO \"sqlite:///../Resources/CIS_2018_lite.sqlite\" (\"index\", id, model_year, make, model, msrp, vehicle_type, milage, axles, base_price, bed_length_inches, bed_type, body_cab_type, body_class, doors, drive_type, engine_hp, top_speed_mph, transmission_speeds, transmission_style, cruise_control, auto_reverse_system, pedestrian_alerting_sound, blind_spot_monitor, forward_collision_warning, keyless_ignition, pedestrian_auto_emergency_brake) VALUES (?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?)\n",
+      "2022-07-05 04:51:21,062 INFO sqlalchemy.engine.Engine [generated in 3.06754s] ((0, 82744, 2019.0, 'HONDA', 'Fit', 17885, 'PASSENGER CAR', 0, None, None, None, 'Short', '0', 'Hatchback', 5.0, '4x2', 128.0, None, None, 'Continuously Variable Transmission (CVT)', '', '', '', '', '', '', ''), (1, 26575, 2019.0, 'NISSAN', 'Sentra', 20190, 'PASSENGER CAR', 0, None, None, None, 'Short', '0', 'Sedan', 4.0, '4x2', None, None, None, '0', '', '', '', '', '', '', ''), (2, 47333, 2019.0, 'NISSAN', 'Titan', 51425, 'TRUCK', 0, None, None, None, 'Short', 'Crew/ Super Crew/ Crew Max', 'Pickup', None, '0', None, None, None, '0', '', '', '', '', '', '', ''), (3, 55794, 2019.0, 'GMC', 'Sierra', 59810, 'TRUCK', 0, None, None, None, 'Short', 'Crew/ Super Crew/ Crew Max', 'Pickup', 4.0, '4WD/4-Wheel Drive/4x4', None, None, None, '0', '', '', '', '', '', '', ''), (4, 110166, 2019.0, 'NISSAN', 'Frontier', 33135, 'TRUCK', 0, None, None, None, 'Short', 'Crew/ Super Crew/ Crew Max', 'Pickup', None, '4WD/4-Wheel Drive/4x4', None, None, None, '0', '', '', '', '', '', '', ''), (5, 113248, 2018.0, 'HYUNDAI', 'Elantra', 26400, 'PASSENGER CAR', 0, None, None, None, 'Short', '0', 'Sedan', 4.0, '0', 201.0, None, None, '0', '', '', '', '', '', '', ''), (6, 116131, 2019.0, 'NISSAN', 'Kicks', 22300, 'PASSENGER CAR', 0, None, None, None, 'Short', '0', 'Hatchback', 4.0, '4x2', None, None, None, '0', '', '', '', '', '', '', ''), (7, 10434, 2019.0, 'CHEVROLET', 'Impala', 36187, 'PASSENGER CAR', 0, 2.0, 31395.0, None, 'Short', '0', 'Sedan', 4.0, '0', None, None, None, '0', '', 'Standard', '', 'Optional', '', 'Standard', '')  ... displaying 10 of 157402 total bound parameter sets ...  (157400, 124225, 2020.0, 'NISSAN', 'Altima', 31670, 'PASSENGER CAR', 0, None, None, None, 'Short', '0', 'Sedan', 4.0, '4x2', None, None, None, '0', '', '', '', '', '', '', ''), (157401, 124230, 2020.0, 'HYUNDAI', 'Elantra', 21885, 'PASSENGER CAR', 0, 2.0, 18200.0, None, 'Short', '0', 'Sedan', 4.0, 'FWD/Front Wheel Drive', 147.0, None, None, 'Continuously Variable Transmission (CVT)', 'Optional', 'Standard', '', 'Standard', 'Standard', '', ''))\n",
+      "2022-07-05 04:51:22,634 INFO sqlalchemy.engine.Engine COMMIT\n",
+      "2022-07-05 04:51:22,747 INFO sqlalchemy.engine.Engine SELECT name FROM sqlite_master WHERE type='table' ORDER BY name\n",
+      "2022-07-05 04:51:22,748 INFO sqlalchemy.engine.Engine [raw sql] ()\n"
+     ]
+    }
+   ],
+   "source": [
+    "sales_df.to_sql('sqlite:///../Resources/CIS_2018_lite.sqlite', sqlite_connection)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2665646a",
    "metadata": {},
    "outputs": [],
    "source": []
