--- a/Notebooks/scrape_individual_cars.ipynb
+++ b/Notebooks/scrape_individual_cars.ipynb
@@ -164,7 +164,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "31eb70b5",
+   "id": "8105b53e",
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +204,7 @@
     "        print(\"bronco\")\n",
     "#url = \"https://www.cargurus.com/Cars/new/searchresults.action?zip=76012&showNegotiable=true&sortDir=ASC&sourceContext=homePageNewCarTab_false_0&distance=50&sortType=PRICE&entitySelectingHelper.selectedEntity=d313#listing=328157772/NONE\"\n",
     "#if 'd313' in url:\n",
-    "#    print('Hell yeah')\n"
+    "#    print(' yeah')\n"
    ]
   },
   {
@@ -906,8 +906,8 @@
     "            df = pd.DataFrame(car_dict,index=[car_dict[\"VIN:\"]])\n",
     "            df.set_index(\"VIN:\", drop=True, append=False, inplace=False, verify_integrity=False)            \n",
     "            df_total.merge(df)\n",
-    "        print('hell ya')\n",
-    "        print('hell no')\n"
+    "        print('ya')\n",
+    "        print('no')\n"
    ]
   },
   {
