--- a/Notebooks/scrape_individual_cars.ipynb
+++ b/Notebooks/scrape_individual_cars.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "528fbd73",
    "metadata": {
     "scrolled": true
@@ -34,10 +34,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[WDM] - ====== WebDriver manager ======\n",
-      "[WDM] - Current google-chrome version is 103.0.5060\n",
-      "[WDM] - Get LATEST chromedriver version for 103.0.5060 google-chrome\n",
-      "[WDM] - Driver [/Users/andrealynnbaker/.wdm/drivers/chromedriver/mac64/103.0.5060.53/chromedriver] found in cache\n"
+      "[WDM] - ====== WebDriver manager ======\n"
      ]
     }
    ],
@@ -1964,12 +1961,73 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "506f806c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "url_list = ['https://www.cargurus.com/Cars/new/searchresults.action?zip=76012&showNegotiable=true&sortDir=ASC&sourceContext=homePageNewCarTab_false_0&distance=50&sortType=PRICE&entitySelectingHelper.selectedEntity=d320#listing=333784109/NEWCAR_FEATURED',\n",
+    "           'https://www.cargurus.com/Cars/new/searchresults.action?zip=76012&showNegotiable=true&sortDir=ASC&sourceContext=homePageNewCarTab_false_0&distance=50&sortType=PRICE&entitySelectingHelper.selectedEntity=d320#listing=333784110/NEWCAR_FEATURED']\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cae218c6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "d5438548",
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
+    "# start with just 1 loop\n",
     "for i in range(0,1):\n",
-    "    browser.visit(table_list[i])\n",
+    "    browser.visit(url_list[i])\n",
+    "    time.sleep(random.randint(3,6))\n",
+    "    \n",
+    "    # place into try / except block:\n",
+    "    try:\n",
+    "        # scrape using find by tag (section).  Should return list.\n",
+    "\n",
+    "        # loop through section list and find the one that has \"Dealer's Price\"\n",
+    "\n",
+    "        # extract section list item into section variable\n",
+    "\n",
+    "        # run replaces on tags in section to turn it into table\n",
+    "\n",
+    "        # put table into single dataframe temp_df (NOT scrape_cars_df)\n",
+    "        \n",
+    "        # create search string to find remaining car data\n",
+    "        # search_str = \" - \" + temp_df[\"Dealer's Price:\"][0]\n",
+    "        # find <h1> tag which contains search_str\n",
+    "        \n",
+    "        # split element string by space\n",
+    "        # year = e[0]\n",
+    "        # make = e[1]\n",
+    "        # model = e[2]\n",
+    "        \n",
+    "        # add columns and data to dataframe (temp_df['year'] = [year])\n",
+    "\n",
+    "        # append new dataframe to scrape_cars_df if successful\n",
+    "    \n",
+    "    # except: add i into failed list\n",
+    "    except:\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8df207a9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(0,1):\n",
+    "    browser.visit(url_list[i])\n",
     "    time.sleep(random.randint(3,6))\n",
     "    \n",
     "    # place into try / except block:\n",
@@ -2079,7 +2137,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
