test first batch

--- a/Notebooks/round 3 car scrapes.ipynb
+++ b/Notebooks/round 3 car scrapes.ipynb
@@ -97,6 +97,14 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "5b253199",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 133,
    "id": "5196f753",
    "metadata": {},
@@ -134,7 +142,7 @@
    ],
    "source": [
     "start = 0\n",
-    "end = 4\n",
+    "end = 200\n",
     "# start with just 1 loop\n",
     "for i in range(start,end):\n",
     "    browser.visit(url_list[i])\n",
@@ -196,7 +204,8 @@
     "    \n",
     "    # except: add i into failed list\n",
     "    except:\n",
-    "        failed_tries.append(i)\n"
+    "        failed_tries.append(i)\n",
+    "cars_df.to_csv(f'../Resources/{start}-{end}.csv')"
    ]
   },
   {
